<?xml version="1.0"?>
<package format="2">
  <name>homework1</name>
  <version>0.0.0</version>
  <description>The homework1 package</description>
  <maintainer email="matteoiervasi@gmail.com">Matteo Iervasi</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/JackHack96/homework1</url>
  <url type="bugtracker">https://github.com/JackHack96/homework1/issues</url>
  <author email="matteoiervasi@gmail.com">Matteo Iervasi</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>